--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 <body>
     <div class="container">
     <h1> 🥐 Croissant</h1>
+    <p>
 A croissant is a buttery, flaky, viennoiserie pastry of Austrian origin, named for its historical crescent shape.
+Croissants and other viennoiserie are made of a layered yeast-leavened dough
+    </p>
     <ul>
         <li>
             <a href="/index.html">Homepage</a>
