--- a/contact.html
+++ b/contact.html
@@ -1,36 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link rel="stylesheet" href="src/styles.css" />
-    <title>Contact</title>
-</head>
-<body>
+    <meta
+      name="description"
+      content="Contact us for more information about Croissant"
+    />
+    <title>Contact us - Croissant.com</title>
+  </head>
+  <body>
     <div class="container">
-    <h1>
-        🥐 Contact us
-</h1>
-    <p>
+      <h1>🥐 Contact us</h1>
+      <p>
         To contact croissant.com, please email us at
         <span>
-            <a href="mailto:hello@croissant.com"> hello@croissant.com</a>
+          <a href="mailto:hello@croissant.com"> hello@croissant.com</a>
         </span>
         for more info
-    </p>
-    <ul>
+      </p>
+      <ul>
         <li>
-            <a href="/index.html">Homepage</a>
+          <a href="/index.html">Homepage</a>
         </li>
         <li>
-            <a href="/photo.html"> Photo </a>
+          <a href="/photo.html"> Photo </a>
         </li>
         <li>
-            <a href="/contact.html"> Contact</a>
+          <a href="/contact.html"> Contact</a>
         </li>
-    </ul>
-</div>
-</body>
+      </ul>
+    </div>
+  </body>
 </html>
