--- a/photo.html
+++ b/photo.html
@@ -1,29 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="src/styles.css" />
-    <title>Photo</title>
-</head>
-<body>
+    <meta name="description" content="Photo of a croissant as an example" />
+    <title>Photo of Croissant - Croissant.com</title>
+  </head>
+  <body>
     <div class="container">
-    <h1>
-        🥐 A picture of a croissant
-    </h1>
-    <img src="https://images.pexels.com/photos/3892469/pexels-photo-3892469.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" alt="" />
-    <ul>
+      <h1>🥐 A picture of a croissant</h1>
+      <img
+        src="https://images.pexels.com/photos/3892469/pexels-photo-3892469.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260"
+        alt="Picture of Croissant"
+      />
+      <ul>
         <li>
-            <a href="/index.html">Homepage</a>
+          <a href="/index.html">Homepage</a>
         </li>
         <li>
-            <a href="/photo.html"> Photo </a>
+          <a href="/photo.html"> Photo </a>
         </li>
         <li>
-            <a href="/contact.html"> Contact</a>
+          <a href="/contact.html"> Contact</a>
         </li>
-    </ul>
-</div>
-</body>
+      </ul>
+    </div>
+  </body>
 </html>
